@@ -25,7 +25,7 @@
 --SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 _addon.name = 'GearSwap'
-_addon.version = '0.867'
+_addon.version = '0.868'
 _addon.author = 'Byrth'
 _addon.commands = {'gs','gearswap'}
 
@@ -247,6 +247,7 @@ windower.register_event('incoming chunk',function(id,data,modified,injected,bloc
 --        world.logged_in = true
         
         _ExtraData.world.in_mog_house = data:byte(0x81) == 1
+        refresh_ffxi_info()
     elseif id == 0x00B then
         items.temporary = make_inventory_table()
     elseif id == 0x0E and pet.index and pet.index == data:unpack('H',9) and math.floor((data:byte(11)%8)/4)== 1 then
@@ -469,7 +470,7 @@ windower.register_event('incoming chunk',function(id,data,modified,injected,bloc
         local flag_2 = data:byte(6)
         local owner_ind = data:unpack('H',13)
         local subj_ind = data:unpack('H',7)
-        
+                
         if flag_1 == 3 and flag_2 == 5 and windower.ffxi.get_player().index == owner_ind and not pet.isvalid then
             if not next_packet_events then next_packet_events = {sequence_id = data:unpack('H',3)} end
             next_packet_events.pet_change = {subj_ind = subj_ind}
@@ -478,6 +479,10 @@ windower.register_event('incoming chunk',function(id,data,modified,injected,bloc
             refresh_globals()
             pet.isvalid = false
             next_packet_events.pet_change = {pet = table.reassign({},pet)}
+        elseif flag_2 == 7 and windower.ffxi.get_player().index == subj_ind and not pet.isvalid then
+            if not next_packet_events then next_packet_events = {sequence_id = data:unpack('H',3)} end
+            pet.isvalid = true
+            next_packet_events.pet_change = {subj_ind = owner_ind}
         end
     elseif id == 0x0DF then
         player.vitals.hp = data:unpack('I',9)
