@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.868 - Ironed out some bugs. Added .in_mog_house. Made pet_change work for gaining charmed pets.
+-------------------------------------------------
 GearSwap 0.865 - Replicated part of the LuaCore API in GearSwap and set limits on global variable refresh rates.
 -------------------------------------------------
 GearSwap 0.860 - Reworked the augment system to use the extdata library. Consequently enabled evolith support.
